--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               I can design beautiful and responsive websites for your business
               or personal use.
             </p>
-            <a href="#">Learn more</a>
+            <button>Book an Appointment now!</button>
           </div>
 
           <div>
@@ -177,7 +177,7 @@
               I can design beautiful and responsive user interfaces for your
               business or personal use.
             </p>
-            <a href="#">Learn more</a>
+            <button>Book an Appointment now!</button>
           </div>
 
           <div>
@@ -187,7 +187,7 @@
               I can manage your database to ensure that your website is running
               smoothly.
             </p>
-            <a href="#">Learn more</a>
+            <button>Book an Appointment now!</button>
           </div>
 
           <div>
@@ -197,7 +197,7 @@
               I can design beautiful and responsive mobile applications for your
               business or personal use.
             </p>
-            <a href="#">Learn more</a>
+            <button>Book an Appointment now!</button>
           </div>
 
           <div>
@@ -207,7 +207,7 @@
               I can host your website on a server to ensure that your website is
               always up and running.
             </p>
-            <a href="#">Learn more</a>
+            <button>Book an Appointment now!</button>
           </div>
 
           <div>
@@ -217,7 +217,7 @@
               I can develop AI to help your business grow and to make your life
               easier.
             </p>
-            <a href="#">Learn more</a>
+            <button>Book an Appointment now!</button>
           </div>
         </div>
       </div>
