--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       src="https://kit.fontawesome.com/162388e7b6.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://js.stripe.com/v3/"></script>
   </head>
   <body>
     <!-- Header Section -->
@@ -167,7 +168,7 @@
               I can design beautiful and responsive websites for your business
               or personal use.
             </p>
-            <button>Book an Appointment now!</button>
+            <button id="book-appointment">Book an Appointment now!</button>
           </div>
 
           <div>
@@ -177,7 +178,7 @@
               I can design beautiful and responsive user interfaces for your
               business or personal use.
             </p>
-            <button>Book an Appointment now!</button>
+            <button id="book-appointment">Book an Appointment now!</button>
           </div>
 
           <div>
@@ -187,7 +188,7 @@
               I can manage your database to ensure that your website is running
               smoothly.
             </p>
-            <button>Book an Appointment now!</button>
+            <button id="book-appointment">Book an Appointment now!</button>
           </div>
 
           <div>
@@ -197,7 +198,7 @@
               I can design beautiful and responsive mobile applications for your
               business or personal use.
             </p>
-            <button>Book an Appointment now!</button>
+            <button id="book-appointment">Book an Appointment now!</button>
           </div>
 
           <div>
@@ -207,7 +208,7 @@
               I can host your website on a server to ensure that your website is
               always up and running.
             </p>
-            <button>Book an Appointment now!</button>
+            <button id="book-appointment">Book an Appointment now!</button>
           </div>
 
           <div>
@@ -217,7 +218,7 @@
               I can develop AI to help your business grow and to make your life
               easier.
             </p>
-            <button>Book an Appointment now!</button>
+            <button id="book-appointment">Book an Appointment now!</button>
           </div>
         </div>
       </div>
