--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               I can design beautiful and responsive websites for your business
               or personal use.
             </p>
-            <button id="book-appointment">Book an Appointment now!</button>
+            <button class="book-appointment">Book an Appointment ($100)</button>
           </div>
 
           <div>
@@ -178,7 +178,7 @@
               I can design beautiful and responsive user interfaces for your
               business or personal use.
             </p>
-            <button id="book-appointment">Book an Appointment now!</button>
+            <button class="book-appointment">Book an Appointment ($100)</button>
           </div>
 
           <div>
@@ -188,7 +188,7 @@
               I can manage your database to ensure that your website is running
               smoothly.
             </p>
-            <button id="book-appointment">Book an Appointment now!</button>
+            <button class="book-appointment">Book an Appointment ($100)</button>
           </div>
 
           <div>
@@ -198,7 +198,7 @@
               I can design beautiful and responsive mobile applications for your
               business or personal use.
             </p>
-            <button id="book-appointment">Book an Appointment now!</button>
+            <button class="book-appointment">Book an Appointment ($100)</button>
           </div>
 
           <div>
@@ -208,7 +208,7 @@
               I can host your website on a server to ensure that your website is
               always up and running.
             </p>
-            <button id="book-appointment">Book an Appointment now!</button>
+            <button class="book-appointment">Book an Appointment ($100)</button>
           </div>
 
           <div>
@@ -218,7 +218,7 @@
               I can develop AI to help your business grow and to make your life
               easier.
             </p>
-            <button id="book-appointment">Book an Appointment now!</button>
+            <button class="book-appointment">Book an Appointment ($100)</button>
           </div>
         </div>
       </div>
