--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
       <div class="container revealable">
         <div class="row">
           <div class="about-col-1">
-            <img src="/zaineelmithani.github.io/assets/images/IMG_0961.jpg" />
+            <img
+              src="/zaineelmithani.github.io/assets/images/IMG_0961.jpg"
+              class="side-image"
+            />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
