--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img
-            src="/zaineelmithani.github.io/assets/images/logo.PNG"
-            class="logo"
-          />
+          <img src="/assets/images/logo.PNG" class="logo" />
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -44,10 +41,7 @@
       <div class="container revealable">
         <div class="row">
           <div class="about-col-1">
-            <img
-              src="/zaineelmithani.github.io/assets/images/IMG_0961.jpg"
-              class="side-image"
-            />
+            <img src="/assets/images/IMG_0961.jpg" />
           </div>
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
