--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <div class="scroll-content">
             <div class="work">
               <img
-                src="/zaineelmithani.github.io/assets/images/Screenshot 2024-07-24 at 12.51.34 PM.png"
+                src="/assets/images/Screenshot 2024-07-24 at 12.51.34 PM.png"
                 class="portfolio-image"
               />
               <div class="layer">
@@ -248,10 +248,7 @@
               </div>
             </div>
             <div class="work">
-              <img
-                src="/zaineelmithani.github.io/assets/images/mAjDOxl.png"
-                class="portfolio-image"
-              />
+              <img src="/assets/images/mAjDOxl.png" class="portfolio-image" />
               <div class="layer">
                 <h3>Twitter API ETL pipeline</h3>
                 <p>
@@ -271,7 +268,7 @@
             </div>
             <div class="work">
               <img
-                src="/zaineelmithani.github.io/assets/images/1*OIQ2NqlSn_w-ryZxj6BWUw.png"
+                src="/assets/images/1*OIQ2NqlSn_w-ryZxj6BWUw.png"
                 class="portfolio-image"
               />
               <div class="layer">
@@ -295,10 +292,7 @@
               </div>
             </div>
             <div class="work">
-              <img
-                src="/zaineelmithani.github.io/assets/images/gallery1.jpg"
-                class="portfolio-image"
-              />
+              <img src="/assets/images/gallery1.jpg" class="portfolio-image" />
               <div class="layer">
                 <h3>Intelli-Fridge</h3>
                 <p>
@@ -320,10 +314,7 @@
               </div>
             </div>
             <div class="work">
-              <img
-                src="/zaineelmithani.github.io/assets/images/gallery.jpg"
-                class="portfolio-image"
-              />
+              <img src="/assets/images/gallery.jpg" class="portfolio-image" />
               <div class="layer">
                 <h3>Load-N-Ask</h3>
                 <p>
