--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                 </li>
                 <li><span>AI Development</span><br />PyTorch</li>
                 <li>
-                  <span>Other</span><br />Git • GitHub • Jira • Docker • AWS
-                  <br />Kubernetes • Respell • Twilio • ARMv7 Assembly •
-                  Rasberrypi
+                  <span>Other</span><br />Git • GitHub • Jira • Docker • AWS •
+                  Netlify • Stripe <br />Kubernetes • Respell • Twilio • ARMv7
+                  Assembly • Rasberrypi
                 </li>
               </ul>
             </div>
