--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                 </li>
                 <li>
                   <span>Front-End Development</span><br />HTML • CSS •
-                  JavaScript • React.js
+                  JavaScript • React.js • Streamlit
                 </li>
-                <li><span>Database Management</span><br />MongoDB Atlas</li>
+                <li><span>Database Management</span><br />MongoDB Atlas • MySQL</li>
                 <li>
                   <span>Mobile Development</span><br />React Native • SwiftUI
                 </li>
@@ -333,6 +333,22 @@
                 </a>
               </div>
             </div>
+            <div class="work">
+              <img
+                src="assets/images/Screenshot 2024-10-12 at 11.44.03 PM.png"
+                class="portfolio-image"
+              />
+              <div class="layer">
+                <h3>Audio-Insights</h3>
+                <p>
+                  ● Boost your learning with AI! Upload any audio—lectures, podcasts, TedTalks—and instantly 
+                  get a concise summary of key topics. <br />
+                  ● Ask unlimited follow-up questions to dive deeper into the content. <br />
+                </p>
+                <a href="https://devpost.com/software/audioinsights-ai?ref_content=user-portfolio&ref_feature=in_progress" target="_blank">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
           </div>
         </div>
         <a
